--- a/blocks/copyright.css
+++ b/blocks/copyright.css
@@ -3,10 +3,9 @@
   max-width: 880px;
   color: #545454;
   font-family: "Inter";
-  font-size: 18px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   margin: 0 auto 0;
-  padding: 67px 19px 19px;
 }
